--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
+    // https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl
+    runtimeOnly group: 'org.apache.taglibs', name: 'taglibs-standard-impl', version: '1.2.5'
+    // https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-spec
+    implementation group: 'org.apache.taglibs', name: 'taglibs-standard-spec', version: '1.2.5'
 }
 
 test {
